--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fresha/capacitor-plugin-applepay",
+  "name": "capacitor-applepay",
   "version": "4.0.0",
   "description": "Apple Pay plugin for Capacitor",
   "main": "dist/plugin.cjs.js",
@@ -9,21 +9,23 @@
   "files": [
     "dist/",
     "ios/Plugin/",
-    "FreshaCapacitorPluginApplepay.podspec"
+    "CapacitorApplePay.podspec"
   ],
-  "author": "Fresha",
+  "author": "Halim Samy",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fresha/capacitor-plugin-applepay.git"
+    "url": "git+https://github.com/halimsamy/capacitor-applepay.git"
   },
   "bugs": {
-    "url": "https://github.com/fresha/capacitor-plugin-applepay/issues"
+    "url": "https://github.com/halimsamy/capacitor-applepay/issues"
   },
   "keywords": [
     "capacitor",
     "plugin",
-    "native"
+    "native",
+    "apple",
+    "pay"
   ],
   "scripts": {
     "verify": "npm run verify:ios && npm run verify:web",
@@ -42,22 +44,22 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@capacitor/core": "^4.0.0",
-    "@capacitor/docgen": "^0.2.0",
-    "@capacitor/ios": "^4.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/docgen": "^0.0.18",
+    "@capacitor/ios": "^5.0.0",
     "@ionic/eslint-config": "^0.3.0",
     "@ionic/prettier-config": "^1.0.1",
     "@ionic/swiftlint-config": "^1.1.2",
     "eslint": "^7.11.0",
-    "prettier": "~2.2.0",
-    "prettier-plugin-java": "~1.0.0",
+    "prettier": "~2.3.0",
+    "prettier-plugin-java": "~1.0.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.32.0",
     "swiftlint": "^1.0.1",
-    "typescript": "~4.0.3"
+    "typescript": "~4.1.5"
   },
   "peerDependencies": {
-    "@capacitor/core": "^4.0.0"
+    "@capacitor/core": "^5.0.0"
   },
   "prettier": "@ionic/prettier-config",
   "swiftlint": "@ionic/swiftlint-config",
