Fix capitalization of CapacitorApplepay in podspec and rollup.config.js

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "files": [
     "dist/",
     "ios/Plugin/",
-    "CapacitorApplePay.podspec"
+    "CapacitorApplepay.podspec"
   ],
   "author": "Halim Samy",
   "license": "MIT",
